--- a/Esercizio3/PizzaService/pom.xml
+++ b/Esercizio3/PizzaService/pom.xml
@@ -71,6 +71,11 @@
             <artifactId>validation-api</artifactId>
             <version>2.0.1.Final</version>
         </dependency>
+        <dependency>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <scope>runtime</scope>
+        </dependency>
     </dependencies>
 
     <build>
